[tool.poetry]
name = "repl_nix_Test-Flask"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
Pyrogram = "^2.0.103"
quart = "^0.18.4"
env2 = "0.0.0"
Flask-Twilio = "0.0.6"
cryptography = "^40.0.2"
Flask = "^2.2.3"
sinchsms = "^1.0.4"
requests = "^2.28.2"
twilio = "^8.1.0"
aiohttp = "^3.8.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
